<resources>
	<string name="app_name">Kxlab_8</string>
	<string name="myserv_activity_name">my services</string>
	<string name="forum_activity_name">forum</string>
	<string name="myinfo_activity_name">my info</string>
	<string name="other_activity_name">other</string>
	<string name="findpass_activity_name">find password</string>
	<string name="pull_to_refresh">Pull to refresh</string>
	<string name="release_to_refresh">Release to refresh</string>
	<string name="refreshing">Refreshing&#8230;</string>
	<string name="not_updated_yet">Not updated yet</string>
	<string name="updated_at">Last updated %1$s ago</string>
	<string name="updated_just_now">Just updated</string>
	<string name="time_error">time error</string>
	<string name="strInputAccHint">Enter your account</string>
	<string name="strAccInputLabel">Account name</string>
	<string name="strPswInputLabel">Password</string>
	<string name="opt_remember">Remember me</string>
	<string name="login">Login</string>
	<string name="findPasswordLabel">Find my password</string>
	<string name="guestLabel">I am a guest</string>
	<string name="login_guest">login as guest</string>
	<string name="login_recover_password">recover password</string>
	<string name="strLoginReplyAmpty">not allow null</string>
	<string name="strLoginReplyErr">username or password is incorrect</string>
	<string name="no_suchbtn">no such button</string>
	<string name="strLoginReplyNotMail">username must be EmaiAddress</string>
	<string name="strRemmenberTips">If this is not your Phone Dont do this</string>
	<string name="strPwdInputEmail">Enter your email</string>
	<string name="strPwdTipLabel">Please enter your password</string>
	<string name="strPwdTittle">Password</string>
	<string name="btnFindpwdSubmit">Submit</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">OK</string>
	<string name="on">ON</string>
	<string name="off">OFF</string>
	<string name="and">and</string>
	<string name="submit">Submit</string>
	<string name="back">Back</string>
	<string name="reset">Reset</string>
	<string name="error">Error</string>
	<string name="loading">Loading</string>
	<string name="cancel">Cancel</string>
	<string name="unknown">Unknown</string>
	<string name="invalidInput">Invalid input</string>
	<string name="unknownBtn">You pressed an unknown button</string>
	<string name="bullet">&#8226;</string>
	<string name="ellipsis">&#8230;</string>
	<string name="niets"/>
	<string name="no_network_title">No Internet</string>
	<string name="no_network_text">Could not connect to the internet. Please check your network connection and try again.</string>
	<string name="action_accept">accept</string>
	<string name="action_search">search</string>
	<string name="action_create">create</string>
	<string name="action_reply">reply</string>
	<string name="action_rate">rate</string>
	<string name="action_delete">delete</string>
	<string name="action_sort">sort</string>
	<string name="action_edit">edit</string>
	<string name="context_img_from_gallery">Choose photo from Gallery</string>
	<string name="context_img_from_camera">Take a photo</string>
	<string name="footer_services">Services</string>
	<string name="footer_myservice">My Services</string>
	<string name="footer_forum">Discussion Forum</string>
	<string name="footer_myinformation">My Information</string>
	<string name="footer_other">Other</string>
	<string name="login_edit_username_hint">User email</string>
	<string name="login_edit_password_hint">Password</string>
	<string name="login_btn_login">sign in</string>
	<string name="login_btn_guest">log in as guest</string>
	<string name="login_txt_forgot"><u>Recover password</u></string>
	<string name="login_txt_remember">Remember me</string>
	<string name="login_dialog_failure_title">Could not login</string>
	<string name="login_dialog_failure_text">Please check your email and password and try again.</string>
	<string name="login_post_guest">You are logged in as a guest</string>
	<string name="login_dialog_recover_title">Recover my password</string>
	<string name="login_dialog_recover_text">Please enter your registered email. Our administrator will send you a new password. Thank you! </string>
	<string name="services_activity_name">services</string>
	<string name="services_tab_community">Community</string>
	<string name="services_tab_recommended">Recommended</string>
	<string name="services_tab_apply">Apply</string>
	<string name="services_empty_list">No services found</string>
	<string name="services_delete_hint">Select the services you want to delete</string>
	<string name="services_delete_confirm_title">Delete</string>
	<string name="services_delete_confirm_text">The following services will be deleted:</string>
	<string name="services_delete_empty_title">Delete</string>
	<string name="services_delete_empty_text">No services were selected. Nothing was deleted.</string>
	<string name="services_delete_success_title">Delete</string>
	<string name="services_delete_success_text">The selected services were deleted.</string>
	<string name="services_delete_failure_title">Delete</string>
	<string name="services_delete_failure_text">No services were selected. Nothing was deleted.</string>
	<string-array name="services_tab_titles">
		<item>@string/services_tab_community</item>
		<item>@string/services_tab_recommended</item>
		<item>@string/services_tab_apply</item>
	</string-array>
	<string name="details_activity_name">details</string>
	<string name="details_confirm_close_title">Data not saved</string>
	<string name="details_confirm_close_text">Are you sure you want to continue? Leaving this screen will result in losing all your changes.</string>
	<string name="details_owner_img">Owner</string>
	<string name="details_owner_name">Name</string>
	<string name="details_owner_score">Activity Score:</string>
	<string name="details_owner_time">join date</string>
	<string name="details_service_img">Owner</string>
	<string name="details_service_name">Title of this service:</string>
	<string name="details_service_btn_score">score</string>
	<string name="details_service_score">Credibility Score:</string>
	<string name="details_service_number">Number of users:</string>
	<string name="details_service_description">These are the details of this service</string>
	<string name="details_empty_list">No comments</string>
	<string name="details_eror_service_edit">An error occurred while trying to load the service information</string>
	<string name="details_comments_empty_list">No comments found</string>
	<string name="details_error_title">Error loading data</string>
	<string name="details_error_text">An error occurred while trying to load the service details</string>
	<string name="details_error_text2">Something really bad happened. I suggest you go back to the previous screen.</string>
	<string name="details_no_comments_title">No comments</string>
	<string name="details_no_comments_text">We could not download the comments.</string>
	<string name="details_no_service_title">No service</string>
	<string name="details_no_service_text">An error occurred while trying to download the latest service details.</string>
	<string name="details_dialog_confirm_user_title">Have you used this service?</string>
	<string name="details_dialog_confirm_user_text">Only users of this service are allowed to provide feedback.</string>
	<string name="details_dialog_rate_title">Rate this service</string>
	<string name="details_dialog_rate_text">Please rate the credibility of this service</string>
	<string name="details_dialog_comment_title">Comment on this service</string>
	<string name="details_dialog_comment_text">Leave a comment for this service</string>
	<string name="details_btn_save">save changes</string>
	<string name="details_edit_title">Edit your service</string>
	<string name="details_edit_new_title">Create a service</string>
	<string name="details_error_edit">An error occurred while trying to load the service information</string>
	<string name="details_edit_confirm_title">Changes not saved</string>
	<string name="details_edit_confirm_text">Would you like to save the changes made to your service?</string>
	<string name="details_title_title">Title</string>
	<string name="details_title_text">Unknown title</string>
	<string name="details_title_hint">Service title</string>
	<string name="details_type_title">Type</string>
	<string name="details_type_text">Unknown type</string>
	<string name="details_type_hint">Service type</string>
	<string name="details_description_title">Description</string>
	<string name="details_description_text">Unknown description</string>
	<string name="details_description_hint">Service description</string>
	<string name="details_error_captured_img">Could not load the image</string>
	<string name="details_img_not_found_title">No image</string>
	<string name="details_img_not_found_text">Could not find the service image.</string>
	<string name="details_update_fail_title">Incomplete save</string>
	<string name="details_update_fail_text">We could not save the service. Please try again.</string>
	<string name="details_lastedit_title">Last edited:</string>
	<string name="details_createtime_title">Created:</string>
	<string name="details_score_success_title">Score saved</string>
	<string name="details_score_success_text">Your score was successfully recorded</string>
	<string name="details_score_failure_title">Score not saved</string>
	<string name="details_score_failure_text">The server did not record your score. (Note that you can only score a service once)</string>
	<string name="details_comment_empty_title">No text</string>
	<string name="details_comment_empty_text">You cannot submit a empty comment</string>
	<string name="details_comment_success_title">Comment saved</string>
	<string name="details_comment_success_text">Your comment was saved.</string>
	<string name="details_comment_failure_title">Comment not saved</string>
	<string name="details_comment_failure_text">The server did not record your comment.</string>
	<string name="comment_owner_img">Commenter</string>
	<string name="comment_owner_name">Commenter</string>
	<string name="comment_owner_score">Activity Score:</string>
	<string name="comment_owner_time">Post time</string>
	<string name="comment_score">Rating</string>
	<string name="details_score_bad">-1: negative</string>
	<string name="details_score_okay">0: average</string>
	<string name="details_score_great">+1: exemplary</string>
	<string name="myinfo_name_title">Name</string>
	<string name="myinfo_name_text">Unknown name</string>
	<string name="myinfo_name_hint">Your name</string>
	<string name="myinfo_email_text">Unknown email</string>
	<string name="myinfo_joindate_title">Join date</string>
	<string name="myinfo_joindate_text">Unknown date</string>
	<string name="myinfo_activitylevel_title">Activity level</string>
	<string name="myinfo_activitylevel_text">-</string>
	<string name="myinfo_activityrecord_title">Activity record</string>
	<string name="myinfo_phone_title">Phone number</string>
	<string name="myinfo_phone_text">Unknown number</string>
	<string name="myinfo_phone_hint">Your phone number</string>
	<string name="myinfo_source_title">Source</string>
	<string name="myinfo_source_text">Unknown source</string>
	<string name="myinfo_source_hint">School source</string>
	<string name="myinfo_password_title">Password</string>
	<string name="myinfo_password_text">No password</string>
	<string name="myinfo_password_hint">Your password</string>
	<string name="myinfo_no_user_title">No / old user info</string>
	<string name="myinfo_no_user_text">We could not download the latest user information.</string>
	<string name="myinfo_btn_logout">log out</string>
	<string name="myinfo_btn_save">save profile</string>
	<string name="myinfo_edit_title">Edit your profile</string>
	<string name="myinfo_eror_user_edit">An error occurred while trying to load the user information</string>
	<string name="myinfo_password_confirm_title">Confirm password</string>
</resources>