<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<ScrollView android:id="@+id/myinfo_container" 
	    android:layout_width="match_parent" android:layout_height="match_parent"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin" >
	    <TableLayout android:id="@+id/myinfo_table"
		    android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:layout_width="match_parent" android:layout_height="wrap_content" 
	        android:stretchColumns="1">
	        <!-- the avatar image and email -->
	        <RelativeLayout android:id="@+id/myinfo_head"
				android:layout_marginLeft="@dimen/row_header_horizontal_padding" 
	            android:layout_width="match_parent" android:layout_height="wrap_content">
				
				<ImageView android:id="@+id/myinfo_img"
					android:layout_width="@dimen/fragment_img_height"
					android:layout_height="@dimen/fragment_img_height"
					android:layout_marginRight="@dimen/row_header_horizontal_padding"
					android:contentDescription="@string/details_owner_img"
					android:src="@drawable/ic_footer_myinformation"
					android:layout_alignParentLeft="true" />
				<ImageView android:id="@+id/myinfo_btn_img"
					android:layout_width="@dimen/fragment_img_height"
					android:layout_height="@dimen/fragment_img_height"
					android:layout_marginRight="@dimen/row_header_horizontal_padding"
					android:contentDescription="@string/details_owner_img"
					android:src="@drawable/spinner_border"
					android:layout_alignParentLeft="true" />
								
				<LinearLayout android:id="@+id/myinfo_name_container" android:orientation="vertical"
				    android:layout_toRightOf="@id/myinfo_img" android:layout_centerVertical="true"
				    android:layout_width="match_parent" android:layout_height="wrap_content">
					
					<TextView android:id="@+id/myinfo_title" 
						android:layout_width="wrap_content" android:layout_height="wrap_content"
		            	android:textAppearance="?android:attr/textAppearanceLarge"
		            	android:text="@string/myinfo_edit_title" />
		
					<TextView android:id="@+id/myinfo_email"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
		            	android:textAppearance="?android:attr/textAppearanceMedium"
		            	android:text="@string/myinfo_email_text" />
				</LinearLayout>
	        </RelativeLayout>
	        
	        <!-- the name edit text -->
	        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/row_vertical_padding">
				<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/myinfo_name_title" />
	 			<EditText android:id="@+id/myinfo_edit_name"
	 			    android:inputType="textPersonName"
	 			    android:hint="@string/myinfo_name_hint"
	 			    android:layout_marginLeft="@dimen/row_horizontal_padding" 
				    android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/niets" />
	    	</TableRow>
	    	
	        <!-- the phone number -->
			<TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/row_vertical_padding">
				<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/myinfo_phone_title" />
	 			<EditText android:id="@+id/myinfo_edit_phone"
	 			    android:inputType="phone"
	 			    android:hint="@string/myinfo_phone_hint"
	 			    android:layout_marginLeft="@dimen/row_horizontal_padding" 
				    android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/niets" />
	    	</TableRow>
	        
			<!-- the student source -->
	        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/row_vertical_padding">
				<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/myinfo_source_title" />
	 			<EditText android:id="@+id/myinfo_edit_source"
	 			    android:inputType="text"
	 			    android:hint="@string/myinfo_source_hint"
	 			    android:layout_marginLeft="@dimen/row_horizontal_padding" 
				    android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/niets" />
	    	</TableRow>
			
	        <!-- the password -->
	        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/row_vertical_padding">
				<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/myinfo_password_title" />
	 			<EditText android:id="@+id/myinfo_edit_password"
	 			    android:inputType="textPassword"
	 			    android:hint="@string/myinfo_password_hint"
	 			    android:layout_marginLeft="@dimen/row_horizontal_padding" 
				    android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/niets" />
	    	</TableRow>
	        
	        <!-- the password confirmation -->
	        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/row_vertical_padding" android:visibility="gone"
	            android:id="@+id/myinfo_row_confirm_password" >
				<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/myinfo_password_confirm_title" />
	 			<EditText android:id="@+id/myinfo_edit_confirm_password"
	 			    android:inputType="textPassword"
	 			    android:hint="@string/myinfo_password_hint"
	 			    android:layout_marginLeft="@dimen/row_horizontal_padding" 
				    android:textAppearance="?android:attr/textAppearanceMedium" 
				    android:text="@string/niets" />
	    	</TableRow>
	        
	        <!-- the activity record -->
			<RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/row_vertical_padding">
			    <Button android:id="@+id/myinfo_btn_save" android:layout_centerInParent="true"
	           		android:layout_width="wrap_content" android:layout_height="wrap_content"
	           		android:text="@string/myinfo_btn_save" />
			</RelativeLayout>
	        		
		</TableLayout>
	</ScrollView>

	<ProgressBar android:id="@+id/myinfo_progress_bar" style="?android:attr/progressBarStyleLarge"
	android:visibility="gone" android:layout_gravity="center"
	android:layout_width="wrap_content" android:layout_height="wrap_content" />
	
</FrameLayout>
