<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" >

	<LinearLayout android:id="@+id/login_holder" 
	    android:layout_width="match_parent" android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal" android:orientation="vertical"
	    android:padding="@dimen/activity_horizontal_margin" >

        <ImageView android:id="@+id/login_img_face" 
            android:layout_gravity="center"
            android:layout_width="@dimen/fragment_img_width"
            android:layout_height="@dimen/fragment_img_height"
            android:src="@drawable/btn_dark_bg_selector"
            android:contentDescription="@string/niets"
            android:layout_marginBottom="@dimen/linearlayout_vertical_margin"  />
	    
        <EditText android:id="@+id/login_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_username_hint"
            android:drawableLeft="@drawable/ic_action_person"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:saveEnabled="true" />
        
        <EditText android:id="@+id/login_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_password_hint"
            android:drawableLeft="@drawable/ic_action_secure"
            android:inputType="textPassword"
            android:singleLine="true"
            android:saveEnabled="true" />
		
		<LinearLayout android:id="@+id/login_remember_holder" 
	    	android:layout_width="match_parent" android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_marginBottom="@dimen/linearlayout_vertical_margin"  >
        
	        <CheckBox android:id="@+id/login_checkbox_savepassword"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="false"
				android:onClick="onBtnClick"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/login_txt_remember" />
	        
	        <TextView  android:id="@+id/login_txt_forgot"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:clickable="true"
				android:onClick="onBtnClick"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/login_txt_forgot" />
		    		    
		</LinearLayout>
		
		<Button android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="onBtnClick"
			android:background="@drawable/btn_bg_selector"
			android:text="@string/login_btn_login"
			android:textColor="@color/white"
			android:layout_marginTop="@dimen/linearlayout_vertical_margin" />
		
		<Button android:id="@+id/login_btn_guest"
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/btn_dark_bg_selector"
			android:onClick="onBtnClick"
			android:text="@string/login_btn_guest"
			android:textColor="@color/white"
			android:layout_marginTop="@dimen/linearlayout_vertical_margin" />
		

	</LinearLayout>
</ScrollView>